added headings to html page

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Sign Up Page</title>
   </head>
-  <body></body>
+  <body>
+    <h1>hallo welt</h1>
+    <h2>schön dich zu sehen!</h2>
+  </body>
 </html>
