adapted markup to pimped up signup ui
already hava an account added

--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
           <input id="confpass" type="password" />
 
           <button action="#" class="btn_signup">Sign up!</button>
+          <p>
+            <br />
+            clicking Sign up button you agree with the
+            <span><a href="#">Terms and Conditions</a></span>
+          </p>
         </form>
       </main>
       <footer class="section_footer">
         <p>
-          clicking Sign up button you agree with the
-          <span><a href="#">Terms and Conditions</a></span>
+          Already registered? Log in <span><a href="#">here</a></span>
         </p>
       </footer>
     </div>
